@startuml
hide circle
hide stereotypes
skinparam linetype ortho
skinparam backgroundColor #FEFEFE
skinparam entity {
    BackgroundColor #F8F9FA
    BorderColor #444444
    FontSize 13
}

entity "tables_restaurant" as tables {
  + id : INT <<PK>>
  --
  numero_table : INT <<NOT NULL>>
  capacite : INT <<NOT NULL>>
  statut : VARCHAR(255) <<NOT NULL>>
  localisation : VARCHAR(255)
}

entity "produits" as produits {
  + id_produit : INT <<PK>>
  --
  nom : VARCHAR(255) <<NOT NULL>>
  prix : FLOAT <<NOT NULL>>
  categorie : VARCHAR(255) <<NOT NULL>>
  description : TEXT
  image_path : VARCHAR(255)
  disponible : BOOLEAN
  created_at : TIMESTAMP
}

entity "stocks" as stocks {
  + id_stock : INT <<PK>>
  --
  nom_ingredient : VARCHAR(255) <<NOT NULL>>
  quantite : FLOAT <<NOT NULL>>
  seuil_alerte : FLOAT <<NOT NULL>>
  unite : VARCHAR(255)
  last_updated : TIMESTAMP
}

entity "produit_ingredients" as prod_ing {
  + id : INT <<PK>>
  --
  # id_produit : INT <<FK>> <<NOT NULL>>
  # id_stock : INT <<FK>> <<NOT NULL>>
  quantite : FLOAT <<NOT NULL>>
}

entity "commandes" as commandes {
  + id_commande : INT <<PK>>
  --
  # id_table : INT <<FK>>
  date_commande : TIMESTAMP <<NOT NULL>>
  total : FLOAT <<NOT NULL>>
  statut : VARCHAR(255) <<NOT NULL>>
  remise : FLOAT
  notes : VARCHAR(255)
  serveur : VARCHAR(255)
}

entity "lignes_commande" as lignes {
  + id_ligne : INT <<PK>>
  --
  # id_commande : INT <<FK>> <<NOT NULL>>
  # id_produit : INT <<FK>>
  quantite : INT <<NOT NULL>>
  prix_unitaire : FLOAT <<NOT NULL>>
}

entity "paiements" as paiements {
  + id_paiement : INT <<PK>>
  --
  # id_commande : INT <<FK>> <<NOT NULL>>
  mode_paiement : VARCHAR(255) <<NOT NULL>>
  montant_recu : FLOAT <<NOT NULL>>
  date_paiement : TIMESTAMP <<NOT NULL>>
}

entity "factures" as factures {
  + id_facture : INT <<PK>>
  --
  # id_commande : INT <<FK>> <<NOT NULL>>
  total : FLOAT <<NOT NULL>>
  date_generation : TIMESTAMP <<NOT NULL>>
  numero_facture : VARCHAR(255)
  mode_paiement : VARCHAR(255)
  chemin_pdf : VARCHAR(255)
}

' === Relationships ===

tables ||--o{ commandes : "1,N"
commandes ||--|{ lignes : "1,N"
commandes ||--|| paiements : "1,1"
commandes ||--|| factures : "1,1"
produits ||--o{ lignes : "1,N"
produits ||--|{ prod_ing : "1,N"
stocks ||--|{ prod_ing : "1,N"

@enduml
